--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial -Persocom, sitio ofertas y Soporte Tecnico </title>
   </head>
 
+<title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial   &#8211; Persocon , sitio ofertas y sistema soporte tecnico</title>
+	  
 	  
 
    <img src="#" alt="" />
