--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   </head>
 
 <title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial   &#8211; Persocon , sitio ofertas y sistema soporte tecnico</title>
+			     <head>
+			 <body>
 	  
 	  
 
