--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <meta charset="UTF-8">
 
  
-  <!-- system gregory pc @ License--2023 -->
+ <!--  autor: jose gregorio hernandez calderon   email: systemgregoryp.c@gmail.com 
+	 software chobits : agatha IA  @ License--2023 -->
   <body>
   
 	  <head>
@@ -26,8 +27,8 @@
     <title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial -Persocom, sitio ofertas y Soporte Tecnico </title>
   </head>
 
-<title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial   &#8211; Persocon , sitio ofertas y sistema soporte tecnico</title>
-			     <head>
+
+	  
 			 <body>
 	  
 	  
