--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
  <!--  autor: jose gregorio hernandez calderon   email: systemgregoryp.c@gmail.com 
 	 software chobits : agatha IA  @ License--2023 -->
   <body>
-  
-	  <head>
+
+	
+  <head>
 		  <body>
     <title>PERSOCON : nueva forma de vida Robótica con inteligencia artificial -Persocom, sitio ofertas y Soporte Tecnico </title>
   </head>
 
-
+  <img src="https://persocon.pages.dev/app/images/a1.jpg" alt="" />
 	  
 			 <body>
 	  
