--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 
 	  <h2 align= "left"><font color= *#4B4B6F  ">PERSOCON: la Oferta adopte hijas con Inteligencia Artificial. </font> </h2>
 
+	 <h3> align= "right"><font color= *#4B4B6F  <a href =  "#">INICIO</h3> | 
+    <h3> align= "right"><font color= *#4B4B6F  <a href =  "#">Contacto</h3> |
+    Forma de Págo
+    store.IA
+    iniciar sesion
+
+ (right)</h3>
+	  
   <img src="https://persocon.pages.dev/app/images/a1.jpg" alt="" />
 	  
 			 <body>
