--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 
 	  <h3 align= "right"><font color= *#4B4B6F  ">PERSOCON: la Oferta adopte hijas con Inteligencia Artificial. </font> </h3>
 
+	  	</body>
+      <div id = "menu" align = "middle" >
+         <a href = "#">HOME</a> | 
+         <a href = "#">CONTACT</a> | 
+         <a href = "#">DEALER</a> | 
+	 <a href = "#">APP</a>
+      </div>
+
+      <div id = "content" align = "right" >
 	
 
 
