--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	  <h2 align= "left"><font color= *#4B4B6F  ">PERSOCON: la Oferta adopte hijas con Inteligencia Artificial. </font> </h2>
 
-	  <h3 align= "right"><font color= *#4B4B6F  ">PERSOCON: la Oferta adopte hijas con Inteligencia Artificial. </font> </h3>
+	  <h3 align= "right"><font color= *#4B4B6F  "> adopte hijas con Inteligencia Artificial. </font> </h3>
 
 	  	</body>
       <div id = "menu" align = "middle" >
