--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
  <!-- MENU -->
 	</body>
       <div id = "menu" align = "middle" >
-         <a href = "#">HOME</a> | 
-         <a href = "#">CONTACT</a> | 
-         <a href = "#">DEALER</a> | 
-	 <a href = "#">APP</a>
+         <a href = "#">Forma de Págo</a> | 
+         <a href = "#">store.IA</a> | 
+         <a href = "#">ROBóTICA</a> | 
+	 <a href = "#">iniciar sesion</a>
       </div>
 
       <div id = "content" align = "left" >
