--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
    
     
 	      </div>
-	
+ <h2 align= "left"><font color= *#4B4B6F  ">PERSOCON : nueva forma de vida Robótica con inteligencia artificial  </font> </h2>
+	  
 <p style="text-align:center"> PERSOCON 2023 @ </p>
 <ul>
 
