--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div id = "content" align = "left" >
 
 	
-<p style="text-align:center;"><img src="#" alt="Logo InternetCtrl"></p>
+<p style="text-align:center;"><img src="https://persocon.pages.dev/app/images/a1.jpg" alt="Logo InternetCtrl"></p>
  
   <body>
     <div id="una capa">
