--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 	  
-  <img src="https://persocon.pages.dev/app/images/a1.jpg" alt="" />
+  <img src="https://persocon.pages.dev/app/images/2.jpg" alt="" />
 	  
 			 <body>
 	  
