--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 	  
-  <img src="https://persocon.pages.dev/app/images/2.jpg" alt="" />
+  <img src="https://persocon.pages.dev/app/images/A1.jpg" alt="" />
 	  
 			 <body>
 	  
@@ -64,7 +64,7 @@
       <div id = "content" align = "left" >
 
 	
-<p style="text-align:center;"><img src="https://persocon.pages.dev/app/images/a1.jpg" alt="Logo InternetCtrl"></p>
+<p style="text-align:center;"><img src="https://persocon.pages.dev/app/images/2.jpg" alt="Logo InternetCtrl"></p>
  
   <body>
     <div id="una capa">
