--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </script>
 
 	      
-<p style="text-align:center"> PERSOCON 2023 @ </p>
+<p style="text-align:center"> @ PERSOCON 2023 @ </p>
 <ul>
 
 
