--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <!-- MENU -->
 	</body>
       <div id = "menu" align = "middle" >
-         <a href = "#">Forma de Págo</a> | 
+         <a href = "https://persocon.pages.dev/app/pago.html">Forma de Págo</a> | 
          <a href = "#">store.IA</a> | 
          <a href = "#">ROBóTICA</a> | 
 	 <a href = "#">iniciar sesion</a>
