--- a/app/pago.html
+++ b/app/pago.html
@@ -17,7 +17,7 @@ h3 {
 </head>
 <body>
 
-<h1>Heading 1 (center)</h1>
+<h1>FORMA DE PAGO </h1>
 <h2>Heading 2 (left)</h2>
 <h3>Heading 3 (right)</h3>
 
