--- a/app/pago.html
+++ b/app/pago.html
@@ -18,10 +18,10 @@ h3 {
 <body>
 
 <h1>FORMA DE PAGO </h1>
-<h2>Heading 2 (left)</h2>
-<h3>Heading 3 (right)</h3>
+<h2>PAYPAL (left)</h2>
+<h3>TRASFERENCIA BANCARIA (right)</h3>
 
-<p>The three headings above are aligned center, left and right.</p>
+<p>La mejor zona de pago tendra el dereho por 2 años APP con AI su propia hija .</p>
 
 </body>
 </html>
