--- a/app/pago.html
+++ b/app/pago.html
@@ -18,9 +18,18 @@ h3 {
 <body>
 
 <h1>FORMA DE PAGO </h1>
-<h2>PAYPAL (left)</h2>
-<h3>TRASFERENCIA BANCARIA (right)</h3>
+<h2>PAYPAL </h2>
+<h3>TRANSFERENCIA BANCARIA </h3>
 
+  
+<div class="item_image">
+<img border="0" class="item_thumb" src="https://persocon.pages.dev/app/images/car.png" /> <span class="item_price">$00.00</span></div>
+<div class="item_Description">
+AI hija Personalizada... </div>
+
+
+
+  
 <p>La mejor zona de pago tendra el dereho por 2 años APP con AI su propia hija .</p>
 
 </body>
