--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  	</body>
       <div id = "menu" align = "middle" >
          <a href = "#">HOME</a> | 
-         <a href = "#">CONTACT</a> | 
+         <a href = "#">CONTACTO</a> | 
          <a href = "#">DEALER</a> | 
 	 <a href = "#">APP</a>
       </div>
