--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	  	</body>
       <div id = "menu" align = "middle" >
-         <a href = "#">HOME</a> | 
+         <a href = "https://persocon.pages.dev/">HOME</a> | 
          <a href = "#">CONTACTO</a> | 
          <a href = "#">DEALER</a> | 
 	 <a href = "#">APP</a>
