--- a/app/pago.html
+++ b/app/pago.html
@@ -30,7 +30,7 @@ AI hija Personalizada... </div>
 
 
   
-<p>La mejor zona de pago tendra el dereho por 2 años APP con AI su propia hija .</p>
+<p>La mejor zona de pago----------- tendra el derecho por 2 años APP con AI su propia hija .</p>
 
 </body>
 </html>
