--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id = "menu" align = "middle" >
          <a href = "https://persocon.pages.dev/app/pago.html">Forma de Págo</a> | 
          <a href = "#">store.IA</a> | 
-         <a href = "#">ROBóTICA</a> | 
+         <a href = "#">Robótica</a> | 
 	 <a href = "https://m3gan.pages.dev/">iniciar sesion</a>
       </div>
 
