--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</body>
       <div id = "menu" align = "middle" >
          <a href = "https://persocon.pages.dev/app/pago.html">Forma de Págo</a> | 
-         <a href = "#">store.IA</a> | 
+         <a href = "https://persocon.pages.dev/app/store.html">store.IA</a> | 
          <a href = "#">Robótica</a> | 
 	 <a href = "https://m3gan.pages.dev/">iniciar sesion</a>
       </div>
