--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </script>
 
 	      
-<p style="text-align:center"> @ PERSOCON 2024 @ </p>
+<p style="text-align:center"> @ PERSOCON 2024-2026 @ </p>
 <ul>
 
 
